# FartBot-bot-that-speaks-out-your-username-discord

./: keep_alive.py  main.py  passwords.txt  pyproject.toml  username.txt
templates/: index.html  login.html
