[tool.poetry]
name = "repl_python3_FartBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
PyNaCl = "^1.4.0"
Flask = "^2.0.2"
mutagen = "^1.45.1"
fart = "^0.1.5"
pafy = "^0.5.5"
python-vlc = "^3.0.12118"
gTTS = "^2.2.3"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
